home page banner button overlapping issue fix.

--- a/docroot/sites/all/themes/ambitious/sass/buttons.scss
+++ b/docroot/sites/all/themes/ambitious/sass/buttons.scss
@@ -66,6 +66,7 @@
     @include box-shadow(0px 6px $green-dark);
 
     background: $green;
+    margin-right: 10px;
 
     &:hover {
       // replace the displacement of the button from the top
